# facealignment

./: .gitmodules  .travis.yml  README.md
esr/: .gitignore  CMakeLists.txt  README.md
esr/src/: ESRBbox.hpp  ESRCascadedFerns.cpp  ESRCascadedFerns.hpp  ESRCommon.hpp  ESRFaceDetector.cpp  ESRFaceDetector.hpp  ESRFern.cpp  ESRFern.hpp  ESRMain.cpp  ESRRegressor.cpp  ESRRegressor.hpp  ESRTest.cpp  ESRTrain.cpp  ESRUtils.cpp  ESRUtils.hpp
lbf/src/: common.cpp  main.cpp  prepare.cpp  test.cpp  train.cpp
